[package]
name = "example-exex-remote"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
alloy = { version = "0.3.6", features = ["rpc-types", "rpc-types-trace", "consensus", "eips"] }

reth = { git = "https://github.com/paradigmxyz/reth" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", features = ["serde"] }
reth-node-api = { git = "https://github.com/paradigmxyz/reth" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth" }
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth" }
reth-rpc-types-compat = { git = "https://github.com/paradigmxyz/reth" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth" }

futures-util = "0.3.30"

async-stream = "0.3.5"
eyre = "0.6"

tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

bincode = "1.3"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth" }



[features]
default = []


[[bin]]
name = "exex_grpc_node"
path = "bin/exex_grpc_node/src/main.rs"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.release]
opt-level = 3
lto = "thin"
debug = "line-tables-only"
strip = true
panic = "unwind"
codegen-units = 16

