[package]
name = "reth-exex-grpc"
version = "0.2.0"
edition = "2021"
rust-version = "1.81"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
alloy = { version = "0.4.2", features = ["rpc-types", "rpc-types-trace", "consensus", "eips"] }

reth = { git = "https://github.com/paradigmxyz/reth", tag="v1.0.8" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", tag="v1.0.8", features = ["serde"] }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag="v1.0.8" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag="v1.0.8" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag="v1.0.8" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag="v1.0.8" }
reth-rpc-types-compat = { git = "https://github.com/paradigmxyz/reth", tag="v1.0.8" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag="v1.0.8" }

futures-util = "0.3.30"

async-stream = "0.3.5"
eyre = "0.6"

tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

bincode = "1.3"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth", tag="v1.0.8" }

[[bin]]
name = "exex_grpc_node"
path = "bin/exex_grpc_node/src/main.rs"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.release]
opt-level = 3
lto = "thin"
debug = "line-tables-only"
strip = true
panic = "unwind"
codegen-units = 16

