[package]
name = "reth-exex-grpc"
version = "0.2.0"
edition = "2021"
rust-version = "1.81"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
alloy-primitives = "0.8.7"
alloy-consensus  = "0.4.2"
alloy-eips = "0.4.2"
alloy-rpc-types = "0.4.2"
alloy-rpc-types-trace = "0.4.2"


reth = { git = "https://github.com/paradigmxyz/reth",rev="9c8360e" }
reth-exex = { git = "https://github.com/paradigmxyz/reth",rev="9c8360e", features = ["serde"] }
reth-node-api = { git = "https://github.com/paradigmxyz/reth",rev="9c8360e" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth",rev="9c8360e" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth",rev="9c8360e" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth",rev="9c8360e" }
reth-rpc-types-compat = { git = "https://github.com/paradigmxyz/reth",rev="9c8360e" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth",rev="9c8360e" }

futures-util = "0.3.30"

async-stream = "0.3.5"
eyre = "0.6"

tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

bincode = "1.3"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth",rev="9c8360e" }

[[bin]]
name = "exex_grpc_node"
path = "bin/exex_grpc_node/src/main.rs"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.release]
opt-level = 3
lto = "thin"
debug = "line-tables-only"
strip = true
panic = "unwind"
codegen-units = 16

